base-deployments/rocketchat/k8s-deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rocketchat
spec:
  type: ClusterIP
  selector:
    app: rocketchat
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
